--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                 <h2>Exercises</h2>
                 <ul>
                     <li>
+                        <a href="week-03-exercise-01/">Week 03 Exercise 01: Box Model Practice</a>
+                    </li>
+                    <li>
                         <a href="example-exercise-00/">Example Exercise 00</a>
                     </li>
                     <li><a href="">Exercise 01</a></li>
