--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                     <li>
                         <a href="week-03-exercise-01/">Week 03 Exercise 01: Box Model Practice</a>
                     </li>
+                    <li><a href="week-04-exercose-01/">Week 04 Exercite01:Dev Tools Vandalism</a></li>
                     <li>
                         <a href="example-exercise-00/">Example Exercise 00</a>
                     </li>
