--- a/week-04-exercise-01/index.html
+++ b/week-04-exercise-01/index.html
@@ -12,8 +12,7 @@
     <main>
         <h1>My Dev Tools Vandalism</h1>
         <p>
-            I used browser developer tools to temporarily "vandalize" a
-            website. Below is a screenshot showing my changes. These edits
+            I used browser developer tools to temporarily "vandalize" the Microsoft website. Below is a screenshot showing my changes. These edits
             only appeared on my computer and did not affect the actual
             website.
         </p>
