--- a/Week-04-exercise-02/index.html
+++ b/Week-04-exercise-02/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <h1>My Collection</h1>
+        <h1>My Favorite Movie Franchises </h1>
         <!-- 
             SAMPLE OVERVIEW TEXT
             Replace this entire paragraph with your own description.
@@ -18,7 +18,7 @@
             P.S. Please use your own words. Be yourself.
         -->
         <p>
-            This is my curated collection of things that I love. Each item here represents something meaningful to me,
+            This is my curated collection of Movie Franchises that I love. Each Franchise here represents a certain time in my life,
             whether it's a favorite book, game, album, rock, mineral, tool, art, or memory. This collection showcases
             how responsive design allows me to adapt my content across all screen sizes.
         </p>
@@ -31,16 +31,14 @@
                 Keep the same structure: image, title, details, description.
             -->
             <div class="collection-card">
-                <img src="./album-01-daftpunk-alive2007.jpg" alt="Alive 2007 by Daft Punk" />
-                <h2>Alive 2007</h2>
-                <p class="details">Album | 2007 | Daft Punk</p>
+                <img src="Transformers.jpg" alt="Transformers Franchise" />
+                <h2>Transformers</h2>
+                <p class="details">Movies from 2007-2023</p>
                 <p class="description">
-                    This is hands-down my favorite Daft Punk album. The crowd's energy, the set arrangement, and the
-                    legendary musicality during their 2007 world tour make this a must-listen for any fan of French
-                    Electro. The sequence from "Television Rules the Nation / Crescendolls" building into "Too Long /
-                    Steam Machine" and then launching into "Around the World / Harder, Better, Faster, Stronger" is
-                    absolute perfection. Listening to this album fills me with energy, optimism, and inspiration. All
-                    neurons activated. Dance time is on. Please make music for us again, Robots!
+                    Transformers has always been my favorite movie franchise, and probably always will be. Ever since I was a childe I
+                    was always so eager to see the newist movie in theaters with my family, and always waited for the next one to release.
+                    Im not sure why I was originally drawn to the movies I just know that I always have been, and will never turn down the
+                    opportunity to watch one with my friends and family.
                 </p>
             </div>
 
@@ -50,15 +48,14 @@
                 Notice the structure is identical to Sample Card 1.
             -->
             <div class="collection-card">
-                <img src="./game-01-indiana-jones-and-the-great-circle.jpg" alt="Indiana Jones and the Great Circle" />
-                <h2>Indiana Jones and the Great Circle</h2>
-                <p class="details">Game | 2024 | Action-adventure | MachineGames</p>
+                <img src="Lord of the rings.jpg" alt="Lord of the rings Franchise" />
+                <h2>Lord of the Rings</h2>
+                <p class="details">Movies from 2001-2003</p>
                 <p class="description">
-                    This game was unexpectedly fun and a great way to enjoy the Indiana Jones universe from a different
-                    perspective. I had zero expectations and didn't play it immediately after release, but I'm glad I
-                    decided to buy it when it went on sale. Was it a perfect game? No! But was it an engaging
-                    single-player experience that let me pretend I was an adventurous archaeologist? Yes! And
-                    really,that's all you need from a game, right? <em>**cracks whip emphatically!**</em>
+                    The Lord of the rings trilogy was one of my dads favorite books and movies. And when he intoduced me to the franchise
+                    I was hooked instantly, It quickly became my defonition of a fantacy world with the orks, elvs, and dworfs all potrayed
+                    so well in the movies.It almost seems like it set a foundation for all fantacy novels and films with so many fallowing
+                    in its footsteps.
                 </p>
             </div>
 
@@ -67,12 +64,14 @@
                 Complete this card by adding your image, title, details, and description.
             -->
             <div class="collection-card">
-                <img src="your-image-3.jpg" alt="Your item 3" />
-                <h2>Your Item Title</h2>
-                <p class="details">Add details here</p>
+                <img src="Harry potter.webp" alt="Harry Potter Franchise" />
+                <h2>Harry Potter</h2>
+                <p class="details">Movies from 2001-2011</p>
                 <p class="description">
-                    Write your description here. Explain why this item is part
-                    of your collection and what makes it special to you.
+                    Harry Potter is another franchise my dad had introduced me to, although as a childe it never realy grabed my attintion,
+                    but as I grew older and more able to understand what is going on I began to truly love the films. Especily because I have never 
+                    been an great reader and the size of the Harry Potter books where quite intimidating to me, having a movie to watch and 
+                    be able to understand why it is such a highly prased franchise was great for me.
                 </p>
             </div>
 
@@ -81,12 +80,14 @@
                 Complete this card by adding your image, title, details, and description.
             -->
             <div class="collection-card">
-                <img src="your-image-4.jpg" alt="Your item 4" />
-                <h2>Your Item Title</h2>
-                <p class="details">Add details here</p>
+                <img src="Pirates of the caribean.jpg" alt="Pirates of the caribean Franchise" />
+                <h2>Pirates of the caribean</h2>
+                <p class="details">Movies from 2003-2017</p>
                 <p class="description">
-                    Write your description here. Explain why this item is part
-                    of your collection and what makes it special to you.
+                    The Pirates of the caribean has always been one of my favorite movies franchises, but it also conects me to a lot of childhood 
+                    memories, When I watch one of the films I am always flooded with memories of going to my cousins house where it almost seemed they 
+                    would always have one of the Pirates of the caribean movies playing and I can remember being glud to the tv while not even knowing
+                    what is going on around me just in aw of the amazing caractures and CGI that you just dont see in movies now days.
                 </p>
             </div>
 
@@ -95,12 +96,14 @@
                 Complete this card by adding your image, title, details, and description.
             -->
             <div class="collection-card">
-                <img src="your-image-5.jpg" alt="Your item 5" />
-                <h2>Your Item Title</h2>
-                <p class="details">Add details here</p>
+                <img src="fast and the furiouse.jpg" alt="Fast and the Furiouse Franchise" />
+                <h2>Fast and the Furiouse</h2>
+                <p class="details">Movies from 2001-2023</p>
                 <p class="description">
-                    Write your description here. Explain why this item is part
-                    of your collection and what makes it special to you.
+                    The Fast in the furiouse movies specifically the first 3-4 introduced me into the sceen of cars and racing. Which I have sence
+                    fallen in love with. I though the cars and paint jobs and engiens where always so cool just leaving me dreaming of having somthing
+                    simular when I grew up. Although I dont have somthing like that now the movies have still imprented that dream in me and I still
+                    hope to one day own a crazy decked out car.
                 </p>
             </div>
 
@@ -109,12 +112,14 @@
                 Complete this card by adding your image, title, details, and description.
             -->
             <div class="collection-card">
-                <img src="your-image-6.jpg" alt="Your item 6" />
-                <h2>Your Item Title</h2>
-                <p class="details">Add details here</p>
+                <img src="kingsmen.jpg" alt="The Kingsmen Franchise" />
+                <h2>The Kingsmen</h2>
+                <p class="details">Movies from 2014-2021</p>
                 <p class="description">
-                    Write your description here. Explain why this item is part
-                    of your collection and what makes it special to you.
+                    Me and my dad had went to see the first kingsmen movie in theaters once it came out not Knowing to much about it, but when we walked
+                    out it seems like it was the only thing we could talk about. we had fallen in love with the action and adventure the movies brought
+                    to the theaters. And where waiting for them to anounce more because we felt that one just wasent enough. Now three films later me and
+                    my dad find ouselves in the same position we where in after the first one despritly waiting the the anounce of another.
                 </p>
             </div>
         </div>
