--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                 <h2>Exercises</h2>
                 <ul>
                     <li>
-                        <a href="week-03-exercise-01/">Week 03 Exercise 01: Box Model Practice</a>
+                        <a href="week-03-exercise-01/index.html">Week 03 Exercise 01: Box Model Practice</a>
                     </li>
-                    <li><a href="week-04-exercise-01/">Week 04 Exercise 01:Dev Tools Vandalism</a>
+                    <li><a href="week-04-exercise-01/index.html">Week 04 Exercise 01:Dev Tools Vandalism</a>
                     </li>
-                    <li><a href="week-04-exercise-02">Week 04 Exercise 02: My Collection</a></li>
+                    <li><a href="week-04-exercise-02/index.html">Week 04 Exercise 02: My Collection</a></li>
                     <li>
                         <a href="example-exercise-00/">Example Exercise 00</a>
                     </li>
