week-05- excersise one
button finalization
and input into homepage

--- a/week-05-exercise-01/index.html
+++ b/week-05-exercise-01/index.html
@@ -35,7 +35,7 @@
         <section class="button-section">
             <h2>Button Style 04</h2>
             <p>Create your button here with a different hover effect.</p>
-            <button class="button-04">Shadow Lift</button>
+            <button class="button-04">Shadow Flip</button>
         </section>
 
         <section class="button-section">
@@ -47,7 +47,7 @@
         <section class="button-section">
             <h2>Button Style 06</h2>
             <p>Create your button here with your most creative effect.</p>
-            <button class="button-06">Slide Effect</button>
+            <button class="button-06">180 Flip</button>
         </section>
     </div>
 </body>
