--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                     <li><a href="week-05-exercise-01/index.html">Week 05 Exercise 02:Interactive Buttons</a>
                     </li>
                     <li>
-                        <a href="example-exercise-00/">Example Exercise 00</a>
+                        <a href="week-06-exercise-01/index.html">Week 06 Exercise 01</a>
                     </li>
                     <li><a href="">Exercise 01</a></li>
                     <li><a href="">Exercise 02</a></li>
