--- a/project-02/index.html
+++ b/project-02/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <titel>Project-02: Professional Portfolio</titel>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
+
 </html>
 
 <body>
-    <nav class="nav-simple">
+
+    <nav class="nav-horizontal">
+        <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="../about.html">About</a></li>
-            <li><a href="../projects.html">Projects</a></li>
-            <li><a href="../contact.html">Contact</a></li>
-        </nav>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Home</h1>
+    </main>
+
 </body>
