--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ Remember: You must create subfolders for each piece of coursework as the semeste
                 <h2>Projects</h2>
                 <ul>
                     <li>
+                        <a href="project-02/index.html">Project-02: Your Professional Portfolio </a>
+                    </li>
+                    <li>
                         <a href="project-01/index.html">Project 01: Personal Landing Page</a>
                     </li>
                     <li>
